# ducktaped

./: CMakeLists.txt  Makefile  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: NEXT_README.md  README.md
src/: ducktaped_extension.cpp
src/include/: ducktaped_extension.hpp  js_argument_push.hpp
test/: README.md
test/sql/: quack.test
